--- a/sass/sidebar/timerbank/_timerbank.scss
+++ b/sass/sidebar/timerbank/_timerbank.scss
@@ -2,5 +2,5 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    height: 90vh;
+    min-height: 90vh;
 }
